--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
         <title>My Website!</title>
     </head>
     <body>
-        Nice day!
+        Nice day! Hello world, hello again.
     </body>
 </html>
