--- a/hello.html
+++ b/hello.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         Nice day!
+        <h1>This is the largest headline</h1>
+        <h2>This is also a large headline</h2>
     </body>
 </html>
