--- a/links1.html
+++ b/links1.html
@@ -15,7 +15,7 @@
                 This is the paragragh 1.shjafhdsiads csiacd cdsui cdusia cds.
             </p>
         </div>
-        <div>
+        <div id=section2>
             <h2>section2</h2>
              <p>
                 This is the paragragh 2.dhsuiad dsuac shau cdsuia su.
