--- a/links1.html
+++ b/links1.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <title>link_to_another_website</title>
+        <style>
+            ol>li{
+                color:red;
+            }
+        </style>
     </head>
+
     <body>
         <h2>Table of contents</h2>
         <ul>
@@ -15,11 +21,29 @@
                 This is the paragragh 1.shjafhdsiads csiacd cdsui cdusia cds.
             </p>
         </div>
-        <div id=section2>
+        <div>
             <h2>section2</h2>
              <p>
                 This is the paragragh 2.dhsuiad dsuac shau cdsuia su.
             </p>
+        </div>
+        <div>
+            <ol>
+                <li>list item one</li>
+                <li>list item two</li>
+                <ul>
+                    <li>sublist item one</li>
+                    <li>sublist item two</li>
+                    <ul>
+                        <li>subsubtest</li>
+                        <li>subsubtest 2</li>
+                    </ul>
+                </ul>
+                <p>paragraph test one</p>
+            </ol>
+            <ul>
+                <li>item in unordered list</li>
+            </ul>
         </div>
         
     </body>
